# ocr

./: .gitignore  Cargo.toml  build.rs  flake.nix
ocr/: Cargo.toml  testfile
ocr/src/: main.rs
src/: api.rs  main.rs  proto.rs  websocket.rs
transform-image/: Cargo.toml
transform-image/src/: main.rs
websocket/: Cargo.toml
websocket/src/: main.rs
