[package]
name = "ocr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", default-features = false, features = ["multipart", "tokio", "http1"] }
image = { version = "0.24.6", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.23.0", default-features = false }
json5 = { version = "0.4.1", default-features = false }
regex = { version = "1.10.3", default-features = false }
reqwest = { version = "0.11.24", default-features = false, features = ["multipart", "default-tls"] }
serde = { version = "1.0.178", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.104", default-features = false, features = ["std"] }
tesseract-plumbing = "0.11.0"
tokio = { version = "1.29.1", default-features = false, features = ["macros", "rt-multi-thread"] }
ws = { version = "0.9.2", default-features = false }
