[package]
name = "ocr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", default-features = false, features = ["multipart", "tokio", "http1"] }
axum_typed_multipart = "0.11.0"
image = { version = "0.24.9", default-features = false, features = ["png", "jpeg"] }
imageproc = { version = "0.23.0", default-features = false }
prost = "0.13.5"
rand = "0.9.1"
reqwest = { version = "0.11.24", default-features = false, features = ["multipart", "native-tls-vendored"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.114", default-features = false, features = ["std"] }
tesseract-plumbing = "0.11.0"
tokio = { version = "1.36.0", default-features = false, features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["v4"] }
ws = { version = "0.9.2", default-features = false }

[profile.release]
codegen-units = 1
lto = "fat"

[build-dependencies]
prost-build = "0.13.5"
