[package]
name = "ocr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
json5 = { version = "0.4.1", default-features = false }
regex = { version = "1.10.3", default-features = false }
reqwest = { version = "0.11.24", default-features = false, features = ["multipart", "default-tls", "blocking"] }
tesseract-plumbing = "0.11.0"
image = { version = "0.24.9", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.114", default-features = false, features = ["std"] }
