[package]
name = "transform-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
image = { version = "0.24.9", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.23.0", default-features = false }
