[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
http-body-util = { version = "0.1.0", default-features = false }
hyper = { version = "1.2.0", default-features = false, features = ["server", "http1"] }
smol = { version = "2.0.0", default-features = false }
smol-hyper = "0.1.1"
ws = { version = "0.9.2", default-features = false }
